# seeforme

./: .gitignore  AGENTS.md  AUTOLOG.md  README.md  seeforme-dev.code-workspace  start-dev-windows.bat
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  errors.py  exception_handlers.py  security.py
backend/app/modules/ai_assist/: models.py  router.py  schemas.py  service.py
backend/app/modules/assignments/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/feedback/: models.py  router.py  schemas.py  service.py
backend/app/modules/help_requests/: models.py  router.py  schemas.py  service.py
backend/app/modules/image_analysis/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/moderation/: models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
backend/app/modules/replies/: models.py  router.py  schemas.py  service.py
backend/app/modules/uploads/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/frontend/: package-lock.json
backend/tests/: conftest.py  test_ai_assist.py  test_auth.py  test_error_response.py  test_help_requests.py  test_image_analysis.py  test_notifications.py  test_uploads.py
docs/: milestone.md  seo-guide.md
frontend/: _check_babel.js  app.json  metro.config.js  package.json  ui-design.md  (+2 more)
(+44 files in other folders)
